# desesc

./: .bazelrc  .clang-tidy  .gitignore  AGENTS.md  BUILD  CLAUDE.md  LICENSE  MODULE.bazel  README.md  SPECSIM.md  TODO.desesc  TODO.md  WORKSPACE  a.txt  ades.txt  bb1_tran  bb1_trans_  bb1_trans_1  bb1_trans_2  bb1org  cachecore.toml  desesc.no_cache_transient  desesc.org_no_cache  kkana.tranient  memory-arch.dot  pp1  pp2
conf/: BUILD  desesc.toml  desesc_power.toml  desesc_specsim_original.toml  dhrystone.riscv  emul_dromajo_test.toml  goldrun1_desesc.result  goldrun1_desesc.toml  goldrun1_kanata_log.result  simu.conf.apache
conf/scripts/: diff_time.py  kanata_diff.py  report.pl
core/: BUILD  BloomFilter.cpp  BloomFilter.h  CacheCore.h  CodeProfile.cpp  CodeProfile.h  CvtEndian.h  DrawArch.h  FastQueue.h  GCObject.h  GStats.cpp  GStats.h  LiveCache.cpp  LiveCache.h  LiveCacheCore.h  Port.cpp  Port.h  Report.cpp  Report.h  SCTable.cpp  SCTable.h  Snippets.cpp  StrictThreadSafeFIFO.h  TQueue.h  ThreadSafeFIFO.h  alloca.h  bloomfilter.cpp  bloomfilter.hpp  cache_bench.cpp  cachecore.hpp  cachecore_bench.cpp  callback.cpp  callback.h  callback.hpp  callback_bench.cpp  config.cpp  config.hpp  config_test.cpp  desesc_alloca.h  drawarch.hpp  (+27 more)
docs/: SPEC_SIM.md  Usage.md  coding_style.md  debugging.md  github-use.md  usage.md
emul/: BUILD  EmulInterface.h  Instruction.h  dinst.cpp  dinst.hpp  dromajo_test.cpp  emul_base.cpp  emul_base.hpp  emul_dromajo.cpp  emul_dromajo.hpp  emul_dromajo_bench.cpp  emul_dromajo_test.cpp  instruction.cpp  instruction.hpp  opcode.hpp  tracer.cpp  tracer.hpp
ext/: libelf.BUILD
main/: BUILD  BootLoader.cpp  bootloader.cpp  bootloader.hpp  desesc.cpp  goldrun_test.sh  pwrmodelut.cpp  update_golden.sh
mem/: BUILD  Bus.cpp  CCache.cpp  CCache.h  GXBar.cpp  MSHR.cpp  MemController.cpp  MemXBar.cpp  MemorySystem.cpp  NICECache.cpp  PortManager.cpp  SL0Cache.cpp  TLB.cpp  UnMemXBar.cpp  bus.cpp  bus.hpp  cache_port.cpp  cache_port.hpp  cache_test.cpp  ccache.cpp  ccache.hpp  gxbar.cpp  gxbar.hpp  mem_bench.cpp  mem_controller.cpp  mem_controller.hpp  membench.cpp  membw_test.cpp  memory_system.cpp  memory_system.hpp  memxbar.cpp  memxbar.hpp  mshr.cpp  mshr.hpp  mshr_entry.hpp  mshr_test.cpp  nice_cache.cpp  nice_cache.hpp  resource_test.cpp  spectre_safe_exclusive_cache.md  (+4 more)
net/: InterConn.cpp  InterConn.h  Message.cpp  NetAddrMap.h  PMessage.cpp  ProtocolBase.cpp  Router.cpp  Router.h  RoutingPolicy.cpp  RoutingTable.cpp  net_bench.cpp
simu/: '  .resource.cpp.swm  AccProcessor.cpp  AccProcessor.h  AddressPredictor.cpp  AddressPredictor.h  BPred.cpp  BPred.h  BUILD  Cluster.cpp  Cluster.h  ClusterManager.cpp  ClusterManager.h  ClusterScheduler.cpp  ClusterScheduler.h  DOLC.h  DepWindow.cpp  DepWindow.h  FetchEngine.cpp  FetchEngine.h  GMemorySystem.cpp  GMemorySystem.h  GOoOProcessor.cpp  GOoOProcessor.h  GPUSMProcessor.cpp  GPUSMProcessor.h  GProcessor.cpp  GProcessor.h  IMLIBest.h  InOrderProcessor.cpp  InOrderProcessor.h  LSQ.cpp  LSQ.h  MRouter.cpp  MRouter.h  MemObj.cpp  MemObj.h  MemRequest.cpp  MemRequest.h  MemStruct.cpp  (+64 more)
tools/: copt_default.bzl
