###############################################################################
module(
    name = "desesc",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

bazel_dep(name = "abseil-cpp", version = "20250512.1") # 20240722.0.bcr.2")

bazel_dep(name = "fmt", version = "11.2.0")

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.4", dev_dependency = True, repo_name = "com_google_benchmark")


#  echo -n "sha256-" && openssl dgst -sha256 -binary v4.2.0.zip | openssl base64 -A; echo

# iassert
bazel_dep(name = "iassert", version = "0.1.0")

archive_override(
    module_name = "iassert",
    integrity = "sha256-lHlDknD8QsWKOVnXql7NIH6/C76SEOHRe0JlMPCwlrI=",
    strip_prefix = "iassert-c2136ed8809ec1addbc48eb836c58d5b895e3f2b",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/c2136ed8809ec1addbc48eb836c58d5b895e3f2b.zip",
    ],
)
