###############################################################################
module(
    name = "desesc",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

bazel_dep(name = "abseil-cpp", version = "20250814.1") # 20240722.0.bcr.2")

bazel_dep(name = "fmt", version = "12.1.0")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#  echo -n "sha256-" && openssl dgst -sha256 -binary v4.2.0.zip | openssl base64 -A; echo

# iassert
bazel_dep(name = "iassert", version = "0.1.1")

archive_override(
    module_name = "iassert",
    integrity = "sha256-Z9PIn1Fvbo8rE5RhStEvuRA0h39CcRK+536PzJKH/UU=",
    strip_prefix = "iassert-db67db81bc7708fae78d1d667c9a085e5c0e123c",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/db67db81bc7708fae78d1d667c9a085e5c0e123c.zip",
    ],
)

# toml11
http_archive(
    name = "toml11",
    build_file = "//packages:toml11.BUILD",
    sha256 = "075dd130a9f517c3eaed502ece6a2c1088b1d0dd4aa79882fd0ca7609325ffdc",
    strip_prefix = "toml11-4.4.0",
    urls = [
        "https://github.com/ToruNiina/toml11/archive/v4.4.0.zip",
    ],
)

# Dromajo
http_archive(
    name = "dromajo",
    build_file = "//packages:dromajo.BUILD",
    patches = ["//packages:dromajo.patch"],
    sha256 = "25af8ca914f0ca3f41a6250fa6069621e3fcaa3230e1bc95ff813eaec9c7e3dd",
    strip_prefix = "dromajo-2a9f5bbfbefa92bc0d81bb83e44e6bab963302cb",
    urls = [
      "https://github.com/masc-ucsc/dromajo/archive/2a9f5bbfbefa92bc0d81bb83e44e6bab963302cb.zip",
    ],
)

# superbp
http_archive(
    name = "superbp",
    sha256 = "ae02a45d835c5a3ebb772cfeba4bb97a6c87996d4fbed9725bb12c6698a1f037",
    strip_prefix = "superbp-6ca757ec5bd7b6560077eb2b898a8fa06cac8b41",
    urls = [
      "https://github.com/masc-ucsc/superbp/archive/6ca757ec5bd7b6560077eb2b898a8fa06cac8b41.zip",
    ],
)

# libelf (needed by dromajo in OSX)
http_archive(
    name = "libelf",
    build_file = "//packages:libelf.BUILD",
    sha256 = "c0627b45c29a151e4e1105988ad7ce9bf83b52cbbca0a1db06c7fcad69b85c4b",
    strip_prefix = "libelf-ba3c81450b91d1935fff01bae191a59d7653d2a5",
    urls = [
        "https://github.com/masc-ucsc/libelf/archive/ba3c81450b91d1935fff01bae191a59d7653d2a5.zip",
    ],
)

