###############################################################################
module(
    name = "desesc",
    version = "0.2.0",
)

# Compiler rules
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

bazel_dep(name = "abseil-cpp", version = "20250814.1") # 20240722.0.bcr.2")

bazel_dep(name = "fmt", version = "12.1.0")

bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True, repo_name = "com_google_googletest")
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True, repo_name = "com_google_benchmark")


http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#  echo -n "sha256-" && openssl dgst -sha256 -binary v4.2.0.zip | openssl base64 -A; echo

# iassert
bazel_dep(name = "iassert", version = "0.1.1")

archive_override(
    module_name = "iassert",
    integrity = "sha256-sMOp2bzYfLhVMYfFoliGIXKHAi3bZpTVTSD+2oXjMp8=",
    strip_prefix = "iassert-0460fbd8405a96b3615be425df9066eba835fcf0",
    urls = [
        "https://github.com/masc-ucsc/iassert/archive/0460fbd8405a96b3615be425df9066eba835fcf0.zip",
    ],
)

# toml11
http_archive(
    name = "toml11",
    build_file = "//packages:toml11.BUILD",
    sha256 = "075dd130a9f517c3eaed502ece6a2c1088b1d0dd4aa79882fd0ca7609325ffdc",
    strip_prefix = "toml11-4.4.0",
    urls = [
        "https://github.com/ToruNiina/toml11/archive/v4.4.0.zip",
    ],
)

# Dromajo
http_archive(
    name = "dromajo",
    build_file = "//packages:dromajo.BUILD",
    patches = ["//packages:dromajo.patch"],
    sha256 = "552c5e200af09dd35112faf6ede602d97ab3017da4e8d2ef65b240d8aa1bbee6",
    strip_prefix = "dromajo-5b55123c5f143891144d0a4e0bc2c39590fba84a",
    urls = [
      "https://github.com/masc-ucsc/dromajo/archive/5b55123c5f143891144d0a4e0bc2c39590fba84a.zip",
    ],
)

# superbp
http_archive(
    name = "superbp",
    sha256 = "887f080d3f67a56a06064db09c1712ed8a6028a1ef74a15fae0b615c4a69bc45",
    strip_prefix = "superbp-91c3b03a033925facc058fd67e2bfa0b15021c48",
    urls = [
      "https://github.com/masc-ucsc/superbp/archive/91c3b03a033925facc058fd67e2bfa0b15021c48.zip",
    ],
)

# libelf (needed by dromajo in OSX)
http_archive(
    name = "libelf",
    build_file = "//packages:libelf.BUILD",
    sha256 = "c0627b45c29a151e4e1105988ad7ce9bf83b52cbbca0a1db06c7fcad69b85c4b",
    strip_prefix = "libelf-ba3c81450b91d1935fff01bae191a59d7653d2a5",
    urls = [
        "https://github.com/masc-ucsc/libelf/archive/ba3c81450b91d1935fff01bae191a59d7653d2a5.zip",
    ],
)

